<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="30dp"
        android:animateLayoutChanges="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            ads:srcCompat="@drawable/logo"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="@dimen/size_title_activity_list"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <TextView
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/tosingup"
            android:textColor="@android:color/white"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textStyle="bold|italic"/>

        <ImageButton
            android:id="@+id/find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:srcCompat="@android:drawable/ic_menu_search" />

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/history"
            android:textColor="@android:color/white"
            android:textColorHint="#fff" />


        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minWidth="320dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:enabled="false"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        ads:srcCompat="@android:drawable/ic_menu_manage"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"   />

    <TextView
        android:id="@+id/copy"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"/>

</FrameLayout >