<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">



    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:text="X"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="30dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            ads:srcCompat="@drawable/logo"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:text="@string/setting"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="@dimen/size_title_activity_list"
            android:textStyle="bold|italic"
            android:typeface="serif" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="Url o ip, and port explicit"
            android:textColor="@android:color/white"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textPersonName"
            android:minWidth="320dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textStyle="bold|italic"/>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</FrameLayout >